--- a/src/front_end/dashboard.html
+++ b/src/front_end/dashboard.html
@@ -108,6 +108,7 @@
     </div>
     <script type='text/javascript' src='over_map.js'></script>
     <script type='text/javascript' src='config.js'></script>
+    <script type='text/javascript' src='geoxml3.js'></script>
     <script type='text/javascript' src='dashboard_map.js'></script>
 
   </body>
