--- a/src/merc.html
+++ b/src/merc.html
@@ -12,7 +12,7 @@
     <div class="w3-opennav w3-xlarge w3-hide-xlarge w3-right" onclick="w3_open()">&#9776;</div>
     <nav class="w3-sidenav w3-collapse w3-white w3-card-2 w3-animate-right" style="width:300px;right:0;" id="mySidenav">
 
-      <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xlarge w3-hide-xlarge">&times;</a>
+      <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xlarge w3-hide-xlarge">Close &times;</a>
       <h1 style="text-align:center;font-size: 24px;">Station 4:</h1>
       <h2 style="text-align:center;font-size: 18px;">Wheel Alignment</h2>
       <p>    </p>
@@ -168,7 +168,7 @@
     for(var i = 0; i < subKmlSources.length; i++) {
       loadKmlLayer(subKmlSources[i], map);
     }
-    
+
   }
   /**
   * Adds a KMLLayer based on the URL passed. Clicking on a marker
